# acquisition-engine

./: .env.example  DEPLOY.md  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
src/: __init__.py  api.py  config.py  main.py  models.py  state_machine.py
src/agents/: auditor_agent.py  outreach_agent.py  scraper_agent.py
src/prompts/: audit_prompt.txt  email_prompt.txt  personalization_prompt.txt  proposal_prompt.txt  whatsapp_prompt.txt
src/utils/: logger.py  maps_client.py  pdf_generator.py  scraper.py
templates/: proposal_template.html
ts-src/: README.md  index.ts  package.json
