[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "acquisition-engine"
version = "0.1.0"
description = "AI-powered lead generation and outreach automation for freelance web developers targeting local F&B clients in Cyberjaya, Malaysia."
authors = ["Automation & AI Engineer <engineer@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.2.0"
langgraph = ">=0.0.50"
openai = ">=1.30.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"
python-dotenv = ">=1.0.0"
playwright = ">=1.44.0"
markdown = ">=3.6"
weasyprint = ">=62.0"
jinja2 = ">=3.1.0"
requests = ">=2.32.0"
beautifulsoup4 = ">=4.12.0"
typing-extensions = ">=4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
black = ">=24.4.0"
isort = ">=5.13.0"
mypy = ">=1.10.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
